[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/Godot-Touch-Input-Manager/input_detection.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/clickable_floor/clickable_floor.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 15, 0.2, 15 )

[node name="clickable_floor" type="Spatial"]
script = ExtResource( 2 )

[node name="input_detection" parent="." instance=ExtResource( 1 )]

[node name="Area" type="Area" parent="."]
collision_layer = 4
collision_mask = 0
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[connection signal="any_gesture" from="input_detection" to="." method="_on_input_detection_any_gesture"]
[connection signal="input_event" from="Area" to="." method="_on_Area_input_event"]
